# kblocks

./: .flatpak-manifest.json  .kde-ci.yml  CMakeLists.txt  FieldInterface.h  GameLogicInterface.h  GamePlayerInterface.h  KBlocksAnimDrop.cpp  KBlocksAnimDrop.h  KBlocksAnimFade.cpp  KBlocksAnimFade.h  KBlocksAnimator.cpp  KBlocksAnimator.h  KBlocksAppThread.cpp  KBlocksAppThread.h  KBlocksConfigManager.cpp  KBlocksConfigManager.h  KBlocksControl.cpp  KBlocksControl.h  KBlocksDefine.cpp  KBlocksDefine.h  KBlocksDisplay.cpp  KBlocksDisplay.h  KBlocksDummyAI.cpp  KBlocksDummyAI.h  KBlocksEvent.cpp  KBlocksEvent.h  KBlocksField.cpp  KBlocksField.h  KBlocksGameLogic.cpp  KBlocksGameLogic.h  KBlocksGameMessage.cpp  KBlocksGameMessage.h  KBlocksGameRecorder.cpp  KBlocksGameRecorder.h  KBlocksGameReplayer.cpp  KBlocksGameReplayer.h  KBlocksGraphics.cpp  KBlocksGraphics.h  KBlocksItemGroup.cpp  KBlocksItemGroup.h  (+69 more)
AI/: EvaluationInterface.h  KBlocksAIEvaluation.cpp  KBlocksAIEvaluation.h  KBlocksAIFeature.cpp  KBlocksAIFeature.h  KBlocksAILog.cpp  KBlocksAILog.h  KBlocksAIPlanner.cpp  KBlocksAIPlanner.h  KBlocksAIPlannerExtend.cpp  KBlocksAIPlannerExtend.h  KBlocksAIPlayer.cpp  KBlocksAIPlayer.h  KBlocksAITypeDefine.cpp  KBlocksAITypeDefine.h  PlannerInterface.h
autotests/: CMakeLists.txt  basic.cpp  test_KBlocksGameLogic.cpp  test_KBlocksItemGroup.cpp  test_KBlocksScene.cpp  test_KBlocksWin.cpp  test_View-Scene.cpp
cmake/: InternalMacros.cmake
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
po/ar/: kblocks.po
po/ar/docs/kblocks/: index.docbook
po/ast/: kblocks.po
po/bg/: kblocks.po
po/bs/: kblocks.po
po/ca/: kblocks.po
po/ca/docs/kblocks/: index.docbook
po/ca@valencia/: kblocks.po
po/cs/: kblocks.po
po/da/: kblocks.po
po/de/: kblocks.po
po/de/docs/kblocks/: index.docbook
po/el/: kblocks.po
po/en_GB/: kblocks.po
po/eo/: kblocks.po
po/es/: kblocks.po
po/es/docs/kblocks/: index.docbook
po/et/: kblocks.po
po/et/docs/kblocks/: index.docbook
po/eu/: kblocks.po
po/fi/: kblocks.po
po/fr/: kblocks.po
po/fr/docs/kblocks/: index.docbook
po/ga/: kblocks.po
po/gl/: kblocks.po
po/gl/docs/kblocks/: index.docbook
po/gu/: kblocks.po
po/he/: kblocks.po
po/hi/: kblocks.po
po/hr/: kblocks.po
po/hu/: kblocks.po
po/ia/: kblocks.po
po/id/: kblocks.po
po/is/: kblocks.po
po/it/: kblocks.po
po/it/docs/kblocks/: index.docbook
po/ja/: kblocks.po
po/ka/: kblocks.po
po/kk/: kblocks.po
po/km/: kblocks.po
po/ko/: kblocks.po
po/lt/: kblocks.po
po/lv/: kblocks.po
po/mai/: kblocks.po
po/ml/: kblocks.po
po/mr/: kblocks.po
po/nb/: kblocks.po
po/nds/: kblocks.po
po/nl/: kblocks.po
po/nl/docs/kblocks/: index.docbook
po/nn/: kblocks.po
po/pl/: kblocks.po
po/pl/docs/kblocks/: index.docbook
po/pt/: kblocks.po
po/pt/docs/kblocks/: index.docbook
po/pt_BR/: kblocks.po
po/pt_BR/docs/kblocks/: index.docbook
po/ro/: kblocks.po
po/ru/: kblocks.po
po/sa/: kblocks.po
po/sk/: kblocks.po
po/sl/: kblocks.po
po/sl/docs/kblocks/: index.docbook
po/sq/: kblocks.po
po/sr/: kblocks.po
po/sr@ijekavian/: kblocks.po
po/sr@ijekavianlatin/: kblocks.po
po/sr@latin/: kblocks.po
po/sv/: kblocks.po
po/sv/docs/kblocks/: index.docbook
po/th/: kblocks.po
po/tr/: kblocks.po
po/ug/: kblocks.po
po/uk/: kblocks.po
po/uk/docs/kblocks/: index.docbook
po/zh_CN/: kblocks.po
po/zh_TW/: kblocks.po
sounds/: CMakeLists.txt
src/: CMakeLists.txt  FieldInterface.h  GameLogicInterface.cpp  GameLogicInterface.h  GamePlayerInterface.h  GraphicsInterface.h  KBlocksAnimDrop.cpp  KBlocksAnimDrop.h  KBlocksAnimFade.cpp  KBlocksAnimFade.h  KBlocksAnimator.cpp  KBlocksAnimator.h  KBlocksAppThread.cpp  KBlocksAppThread.h  KBlocksConfigManager.cpp  KBlocksConfigManager.h  KBlocksDefine.cpp  KBlocksDefine.h  KBlocksDisplay.cpp  KBlocksDisplay.h  KBlocksDummyAI.cpp  KBlocksDummyAI.h  KBlocksField.cpp  KBlocksField.h  KBlocksGameLogic.cpp  KBlocksGameLogic.h  KBlocksGameMessage.cpp  KBlocksGameMessage.h  KBlocksGameRecorder.cpp  KBlocksGameRecorder.h  KBlocksGameReplayer.cpp  KBlocksGameReplayer.h  KBlocksGraphics.cpp  KBlocksGraphics.h  KBlocksItemGroup.cpp  KBlocksItemGroup.h  KBlocksKeyboardPlayer.cpp  KBlocksKeyboardPlayer.h  KBlocksLayout.cpp  KBlocksLayout.h  (+48 more)
src/AI/: EvaluationInterface.h  KBlocksAIEvaluation.cpp  KBlocksAIEvaluation.h  KBlocksAIFeature.cpp  KBlocksAIFeature.h  KBlocksAILog.cpp  KBlocksAILog.h  KBlocksAIPlanner.cpp  KBlocksAIPlanner.h  KBlocksAIPlannerExtend.cpp  KBlocksAIPlannerExtend.h  KBlocksAIPlayer.cpp  KBlocksAIPlayer.h  KBlocksAITypeDefine.h  PlannerInterface.h
src/Testing/: CMakeLists.txt  MockField.h  MockGameLogic.h  MockGraphics.h  MockPiece.h  MockScene.h  MockSingleGame.h  MockSound.h  MockSvgItem.h  TestingKBlocksItemGroup.h  TestingKBlocksWin.cpp  TestingKBlocksWin.h
src/config/: settings.kcfgc
themes/: CMakeLists.txt  aztek.desktop  aztek.svgz  bw.desktop  default.desktop  default_old.desktop  egyptian.desktop  oxygen.desktop
